--- a/geopandas_environment.yml
+++ b/geopandas_environment.yml
@@ -3,147 +3,148 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - affine=2.3.0=py_0
-  - appnope=0.1.0=py37_1000
-  - attrs=19.3.0=py_0
-  - backcall=0.1.0=py_0
-  - bokeh=1.4.0=py37_0
-  - boost-cpp=1.70.0=h75728bb_2
-  - bzip2=1.0.8=h0b31af3_2
-  - ca-certificates=2019.11.28=hecc5488_0
-  - cairo=1.16.0=he1c11cd_1002
-  - certifi=2019.11.28=py37_0
-  - cffi=1.13.2=py37h33e799b_0
-  - cfitsio=3.470=h84d2f63_2
-  - chardet=3.0.4=py37_1003
-  - click=7.0=py_0
-  - click-plugins=1.1.1=py_0
-  - cligj=0.5.0=py_0
-  - contextily=1.0rc2=py_0
-  - cryptography=2.8=py37hafa8578_1
-  - curl=7.65.3=h22ea746_0
-  - cycler=0.10.0=py_2
-  - decorator=4.4.1=py_0
-  - descartes=1.1.0=py_4
-  - entrypoints=0.3=py37_1000
-  - expat=2.2.9=h4a8c4bd_2
-  - fiona=1.8.13=py37he71f6a4_0
-  - fontconfig=2.13.1=h6b1039f_1001
-  - freetype=2.10.0=h24853df_1
-  - freexl=1.0.5=h1de35cc_1002
-  - gdal=3.0.4=py37h97c3584_0
-  - geographiclib=1.50=py_0
-  - geopandas=0.6.2=py_0
-  - geopy=1.21.0=py_0
-  - geos=3.8.0=h4a8c4bd_0
-  - geotiff=1.5.1=hc9fff18_8
-  - gettext=0.19.8.1=h46ab8bc_1002
-  - giflib=5.2.1=h0b31af3_1
-  - glib=2.58.3=py37h577aef8_1002
-  - hdf4=4.2.13=h84186c3_1003
-  - hdf5=1.10.5=nompi_h3e39495_1104
-  - icu=64.2=h6de7cb9_1
-  - idna=2.8=py37_1000
-  - ipykernel=5.1.4=py37h5ca1d4c_0
-  - ipython=7.12.0=py37h5ca1d4c_0
-  - ipython_genutils=0.2.0=py_1
-  - jedi=0.16.0=py37_0
-  - jinja2=2.11.1=py_0
-  - joblib=0.14.1=py_0
-  - jpeg=9c=h1de35cc_1001
-  - json-c=0.13.1=h1de35cc_1001
-  - jupyter_client=5.3.4=py37_1
-  - jupyter_core=4.6.1=py37_0
-  - kealib=1.4.10=h6659575_1005
-  - kiwisolver=1.1.0=py37ha1b3eb9_0
-  - krb5=1.16.4=h1752a42_0
-  - libblas=3.8.0=14_openblas
-  - libcblas=3.8.0=14_openblas
-  - libcurl=7.65.3=h16faf7d_0
-  - libcxx=9.0.1=1
-  - libdap4=3.20.4=habf5908_0
-  - libedit=3.1.20170329=hcfe32e1_1001
-  - libffi=3.2.1=h6de7cb9_1006
-  - libgdal=3.0.4=hf96e369_0
-  - libgfortran=4.0.0=2
-  - libiconv=1.15=h01d97ff_1005
-  - libkml=1.3.0=hed7d534_1010
-  - liblapack=3.8.0=14_openblas
-  - libnetcdf=4.7.3=nompi_hda4e5f1_101
-  - libopenblas=0.3.7=h3d69b6c_7
-  - libpng=1.6.37=h2573ce8_0
-  - libpq=12.1=h31a01ba_0
-  - libsodium=1.0.17=h01d97ff_0
-  - libspatialindex=1.9.3=h4a8c4bd_1
-  - libspatialite=4.3.0a=h9c28a66_1034
-  - libssh2=1.8.2=hcdc9a53_2
-  - libtiff=4.1.0=ha78913b_3
-  - libwebp=1.0.2=hd3bf737_5
-  - libxml2=2.9.10=h53d96d6_0
-  - llvm-openmp=9.0.1=h28b9765_2
-  - lz4-c=1.8.3=h6de7cb9_1001
-  - markupsafe=1.1.1=py37h0b31af3_0
-  - matplotlib=3.1.3=1
-  - matplotlib-base=3.1.3=py37h11da6c2_1
-  - mercantile=1.1.2=py_0
-  - munch=2.5.0=py_0
-  - ncurses=6.1=h0a44026_1002
-  - numpy=1.18.1=py37hde6bac1_0
-  - olefile=0.46=py_0
-  - openjpeg=2.3.1=hcdae239_3
-  - openssl=1.1.1d=h0b31af3_0
-  - packaging=20.1=py_0
-  - pandas=1.0.0=py37h4f17bb1_0
-  - parso=0.6.1=py_0
-  - patsy=0.5.1=py_0
-  - pcre=8.43=h4a8c4bd_0
-  - pexpect=4.8.0=py37_0
-  - pickleshare=0.7.5=py37_1000
-  - pillow=7.0.0=py37h918e99a_0
-  - pip=20.0.2=py37_1
-  - pixman=0.38.0=h01d97ff_1003
-  - poppler=0.67.0=h16886b5_8
-  - poppler-data=0.4.9=1
-  - postgresql=12.1=h26bc10f_0
-  - proj=6.3.0=h773a61f_0
-  - prompt_toolkit=3.0.3=py_0
-  - ptyprocess=0.6.0=py_1001
-  - pycparser=2.19=py37_1
-  - pygments=2.5.2=py_0
-  - pyopenssl=19.1.0=py37_0
-  - pyparsing=2.4.6=py_0
-  - pyproj=2.4.2.post1=py37hf8af742_1
-  - pysocks=1.7.1=py37_0
-  - python=3.7.6=h5c2c468_2
-  - python-dateutil=2.8.1=py_0
-  - pytz=2019.3=py_0
-  - pyyaml=5.3=py37h0b31af3_0
-  - pyzmq=18.1.1=py37h4bf09a9_0
-  - rasterio=1.1.2=py37he71f6a4_0
-  - readline=8.0=hcfe32e1_0
-  - requests=2.22.0=py37_1
-  - rtree=0.9.3=py37h7b0cdae_0
-  - scipy=1.4.1=py37h82752d6_0
-  - seaborn=0.10.0=py_1
-  - setuptools=45.1.0=py37_0
-  - shapely=1.7.0=py37h999ffa5_0
-  - six=1.14.0=py37_0
-  - snuggs=1.4.7=py_0
-  - sqlite=3.30.1=h93121df_0
-  - statsmodels=0.11.0=py37h0b31af3_0
-  - tbb=2018.0.5=h2d50403_0
-  - tiledb=1.7.0=hd5e958f_2
-  - tk=8.6.10=hbbe82c9_0
-  - tornado=6.0.3=py37h0b31af3_0
-  - traitlets=4.3.3=py37_0
-  - tzcode=2019a=h01d97ff_1002
-  - urllib3=1.25.7=py37_0
-  - wcwidth=0.1.8=py_0
-  - wheel=0.34.2=py37_0
-  - xerces-c=3.2.2=hbda6038_1004
-  - xz=5.2.4=h1de35cc_1001
-  - yaml=0.2.2=h0b31af3_1
-  - zeromq=4.3.2=h6de7cb9_2
-  - zlib=1.2.11=h0b31af3_1006
-  - zstd=1.4.4=he7fca8b_1
+  - affine=2.3.0
+  - appnope=0.1.0
+  - attrs=19.3.0
+  - backcall=0.1.0
+  - bokeh=1.4.0
+  - boost-cpp=1.70.0
+  - bzip2=1.0.8
+  - ca-certificates=2019.11.28
+  - cairo=1.16.0
+  - certifi=2019.11.28
+  - cffi=1.13.2
+  - cfitsio=3.470
+  - chardet=3.0.4
+  - click=7.0
+  - click-plugins=1.1.1
+  - cligj=0.5.0
+  - contextily=1.0rc2
+  - cryptography=2.8
+  - curl=7.65.3
+  - cycler=0.10.0
+  - decorator=4.4.1
+  - descartes=1.1.0
+  - entrypoints=0.3
+  - expat=2.2.9
+  - fiona=1.8.13
+  - fontconfig=2.13.1
+  - freetype=2.10.0
+  - freexl=1.0.5
+  - gdal=3.0.4
+  - geographiclib=1.50
+  - geopandas=0.6.2
+  - geopy=1.21.0
+  - geos=3.8.0
+  - geotiff=1.5.1
+  - gettext=0.19.8.1
+  - giflib=5.2.1
+  - glib=2.58.3
+  - hdf4=4.2.13
+  - hdf5=1.10.5
+  - icu=64.2
+  - idna=2.8
+  - ipykernel=5.1.4
+  - ipython=7.12.0
+  - ipython_genutils=0.2.0
+  - jedi=0.16.0
+  - jinja2=2.11.1
+  - joblib=0.14.1
+  - jpeg=9c
+  - json-c=0.13.1
+  - jupyter_client=5.3.4
+  - jupyter_core=4.6.1
+  - kealib=1.4.10
+  - kiwisolver=1.1.0
+  - krb5=1.16.4
+  - libblas=3.8.0
+  - libcblas=3.8.0
+  - libcurl=7.65.3
+  - libcxx=9.0.1
+  - libdap4=3.20.4
+  - libedit=3.1.20170329
+  - libffi=3.2.1
+  - libgdal=3.0.4
+  - libgfortran=4.0.0
+  - libiconv=1.15
+  - libkml=1.3.0
+  - liblapack=3.8.0
+  - libnetcdf=4.7.3
+  - libopenblas=0.3.7
+  - libpng=1.6.37
+  - libpq=12.1
+  - libsodium=1.0.17
+  - libspatialindex=1.9.3
+  - libspatialite=4.3.0a
+  - libssh2=1.8.2
+  - libtiff=4.1.0
+  - libwebp=1.0.2
+  - libxml2=2.9.10
+  - llvm-openmp=9.0.1
+  - lz4-c=1.8.3
+  - markupsafe=1.1.1
+  - matplotlib=3.1.3
+  - matplotlib-base=3.1.3
+  - mercantile=1.1.2
+  - munch=2.5.0
+  - ncurses=6.1
+  - numpy=1.18.1
+  - olefile=0.46
+  - openjpeg=2.3.1
+  - openssl=1.1.1d
+  - packaging=20.1
+  - pandas=1.0.0
+  - parso=0.6.1
+  - patsy=0.5.1
+  - pcre=8.43
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=7.0.0
+  - pip=20.0.2
+  - pixman=0.38.0
+  - poppler=0.67.0
+  - poppler-data=0.4.9
+  - postgresql=12.1
+  - proj=6.3.0
+  - prompt_toolkit=3.0.3
+  - ptyprocess=0.6.0
+  - pycparser=2.19
+  - pygments=2.5.2
+  - pyopenssl=19.1.0
+  - pyparsing=2.4.6
+  - pyproj=2.4.2.post1
+  - pysocks=1.7.1
+  - python=3.7.6
+  - python-dateutil=2.8.1
+  - pytz=2019.3
+  - pyyaml=5.3
+  - pyzmq=18.1.1
+  - rasterio=1.1.2
+  - readline=8.0
+  - requests=2.22.0
+  - rtree=0.9.3
+  - scipy=1.4.1
+  - seaborn=0.10.0
+  - setuptools=45.1.0
+  - shapely=1.7.0
+  - six=1.14.0
+  - snuggs=1.4.7
+  - sqlite=3.30.1
+  - statsmodels=0.11.0
+  - tbb=2018.0.5
+  - tiledb=1.7.0
+  - tk=8.6.10
+  - tornado=6.0.3
+  - traitlets=4.3.3
+  - tzcode=2019a
+  - urllib3=1.25.7
+  - wcwidth=0.1.8
+  - wheel=0.34.2
+  - xerces-c=3.2.2
+  - xz=5.2.4
+  - yaml=0.2.2
+  - zeromq=4.3.2
+  - zlib=1.2.11
+  - zstd=1.4.4
+prefix: /Users/andrewhalleran/anaconda3/envs/geopandas_complete
 
